--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./index.ts",
-    "start": "ts-node ./index.ts"
+    "start": "ts-node ./index.ts",
+    "clientdev": "nodemon ./src/client.ts",
+    "serverdev": "nodemon ./src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +17,8 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "grenache-nodejs-link": "^0.7.12",
+    "grenache-nodejs-ws": "^0.7.10",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
