--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "grenache-nodejs-link": "^0.7.12",
     "grenache-nodejs-ws": "^0.7.10",
@@ -26,6 +27,7 @@
     "@types/body-parser": "^1.19.2",
     "@types/chai": "^4.3.1",
     "@types/cors": "^2.8.12",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/mocha": "^9.1.1",
     "@types/supertest": "^2.0.12",
