--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./index.ts",
-    "start": "ts-node ./index.ts",
-    "clientdev": "nodemon ./src/client.ts",
-    "serverdev": "nodemon ./src/server.ts"
+    "dev": "nodemon ./src/index.ts",
+    "start": "ts-node ./src/index.ts",
+    "grape_client_dev": "nodemon ./src/grapeClient.ts",
+    "grape_server_dev": "nodemon ./src/grapeServer.ts",
+    "grape_client": "ts-node ./src/grapeClient.ts",
+    "grape_server": "ts-node ./src/grapeServer.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "grenache-nodejs-link": "^0.7.12",
     "grenache-nodejs-ws": "^0.7.10",
     "ts-node": "^10.9.1",
@@ -29,6 +32,7 @@
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/express-validator": "^3.0.0",
     "@types/mocha": "^9.1.1",
     "@types/supertest": "^2.0.12",
     "chai": "^4.3.6",
