--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -r ts-node/register tests/*/*.spec.ts --exit",
     "dev": "nodemon ./src/index.ts",
     "start": "ts-node ./src/index.ts",
     "grape_client_dev": "nodemon ./src/grapeClient.ts",
